# SimpleBillingLLM

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  llm_worker_start.py  main.py  pyproject.toml  streamlit_app.py  tg_bot_start.py
.github/: copilot-instructions.md
core/entities/: model.py  prediction.py  queue_item.py  user.py
core/repositories/: model_repository.py  user_repository.py
core/security/: password_utils.py
core/use_cases/: llm_use_cases.py  user_use_cases.py
data/: billing_llm.db
docs/: 4_auth.md
docs/planning/: 0_task.md  1_planning.md  2_implement.md  3_result.md  4_auth.md  5_postgres.md
infra/api_client/: client.py
infra/db/: initialize_db.py  model_repository_impl.py  prediction_repository_impl.py  transaction_repository_impl.py  user_repository_impl.py
infra/llm/: dummy_llm.py  gguf_llm.py  openai_llm.py  vllm_gguf_llm.py
infra/queue/: celery_app.py  tasks.py
infra/telegram/: bot.py
infra/web/controllers/: auth_controller.py  prediction_controller.py  user_controller.py
